--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CI
 on:
   workflow_dispatch:
   push:
-    branches: [main, 'release/v*', beta, alpha]
+    branches: [main, 'release/v*', next, next-major, beta, alpha]
   pull_request:
-    branches: [main, 'release/v*', beta, alpha]
+    branches: [main, 'release/v*', next, next-major, beta, alpha]
   schedule:
     - cron: '28 14 * * *' # At 14:28 every day
 
