ci(github): explicit runner Ubuntu version for jobs

--- a/.github/workflows/openssf-scorecard-scan.yml
+++ b/.github/workflows/openssf-scorecard-scan.yml
@@ -13,7 +13,7 @@ permissions: read-all
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 120
 
     permissions:
