--- a/.github/workflows/release-sign.yml
+++ b/.github/workflows/release-sign.yml
@@ -18,7 +18,7 @@ permissions: {}
 jobs:
   sign:
     name: Sign
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 120
 
     permissions:
