ci(release): setup the GITHUB_TOKEN environment variable
The observed issue at releasing time is the following one:
```
[11:11:44 PM] [semantic-release] [@semantic-release/github] › ℹ  Verify GitHub authentication (https://api.github.com)
[11:11:44 PM] [semantic-release] › ✘  Failed step "verifyConditions" of plugin "@semantic-release/github"
[11:11:44 PM] [semantic-release] › ℹ  Start step "fail" of plugin "@semantic-release/exec"
[11:11:44 PM] [semantic-release] › ✔  Completed step "fail" of plugin "@semantic-release/exec"
[11:11:44 PM] [semantic-release] › ℹ  Start step "fail" of plugin "@semantic-release/github"
[11:11:44 PM] [semantic-release] [@semantic-release/github] › ℹ  Verify GitHub authentication (https://api.github.com)
[11:11:44 PM] [semantic-release] › ✘  Failed step "fail" of plugin "@semantic-release/github"
[11:11:44 PM] [semantic-release] › ✘  ENOGHTOKEN No GitHub token specified.
A GitHub personal token (https://github.com/semantic-release/github#readme/blob/master/README.md#github-authentication) must be created and set in the GH_TOKEN or GITHUB_TOKEN environment variable on your CI environment.

Please make sure to create a GitHub personal token (https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line) and to set it in the GH_TOKEN or GITHUB_TOKEN environment variable on your CI environment. The token must allow to push to the repository Djaytan/mc-jobs-reborn-patch-place-break.

[11:11:44 PM] [semantic-release] › ✘  ENOGHTOKEN No GitHub token specified.
A GitHub personal token (https://github.com/semantic-release/github#readme/blob/master/README.md#github-authentication) must be created and set in the GH_TOKEN or GITHUB_TOKEN environment variable on your CI environment.

Please make sure to create a GitHub personal token (https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line) and to set it in the GH_TOKEN or GITHUB_TOKEN environment variable on your CI environment. The token must 

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,6 +54,8 @@ jobs:
 
       - name: Release
         id: release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         working-directory: .github/
         run: |
           npx --no-install semantic-release --ci
@@ -74,7 +76,6 @@ jobs:
       TAG_NAME: ${{ needs.release-perform.outputs.release-tag }}
       ASSETS_DIR: ${{ github.workspace }}/assets
       SIGNATURES_DIR: ${{ github.workspace }}/signatures
-      GH_TOKEN: ${{ github.token }}
 
     steps:
       - name: Harden runner
@@ -107,12 +108,16 @@ jobs:
           echo "The provided tag name '${TAG_NAME}' is valid"
 
       - name: Download release assets
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: gh release download "${TAG_NAME}" --dir "${ASSETS_DIR}"
 
       - name: Install Cosign
         uses: sigstore/cosign-installer@9614fae9e5c5eddabb09f90a270fcb487c9f7149 # v3.3.0
 
       - name: Sign blob files
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           mkdir --parents "${SIGNATURES_DIR}"
 
@@ -190,6 +195,8 @@ jobs:
           done
 
       - name: Upload signature assets in release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           if [[ -z "$(ls --almost-all "${SIGNATURES_DIR}" 2>/dev/null)" ]]; then
             echo 'No asset to be uploaded in the GitHub release'
