--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,15 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "configMigration": true,
   "extends": [
     "config:best-practices",
-    "config:semverAllMonthly"
+    "schedule:monthly",
+    ":maintainLockFilesWeekly",
+    "security:openssf-scorecard",
+    "workarounds:mavenCommonsAncientVersion",
+    ":enableVulnerabilityAlertsWithLabel(t:security)",
+    ":label(t:dependencies)",
+    ":semanticCommits",
+    ":semanticCommitType(build)"
   ],
-  "labels": ["t:dependencies"],
-  "vulnerabilityAlerts": {
-    "labels": ["t:security"]
-  },
-  "osvVulnerabilityAlerts": true,
-  "semanticCommits": "enabled",
-  "semanticCommitType": "build"
+  "configMigration": true,
+  "osvVulnerabilityAlerts": true
 }
