ci(release): fixing remaining issues & finalizing in pipeline
The primary goal of this change is to make semantic releasing process working once and for all!

The remaining observed issue was the following one when executing the command `git commit --message='docs(changelog): release v3.0.3' "${CHANGELOG_FILE}"`:

```
error: pathspec '/home/runner/work/mc-jobs-reborn-patch-place-break/mc-jobs-reborn-patch-place-break/docs/CHANGELOG.md' did not match any file(s) known to git
```

Which gets solved by executing this command before committing:

```
git add "${CHANGELOG_FILE}"
```

Tests outcomes in an ad-hoc repository can be found:
* Successful release workflow: https://github.com/Djaytan/semantic-release-experimentations/actions/runs/7921110356
* Created GitHub release containing both the artifact & the associated signature files: https://github.com/Djaytan/semantic-release-experimentations/releases/tag/v1.10.0
* The opened PR for updating the existing `CHANGELOG.md` file: https://github.com/Djaytan/semantic-release-experimentations/pull/4

Meaning that everything seems good now, and providing us enough confidence concerning the merging outcomes of this change!

Opportunities to finalize the setup has been taken as well:
* Each provided GitHub permission is now justified by a comment
* The `semantic-release-github-pullrequest` dependency has been cleaned-up from the `package.json` file and its `package-lock.json` one
* The `--ci` argument has been removed when dispatching the `semantic-release` command since that's already the default command behavior
* Documenting the hack implemented with the temporary file for retrieving the release version tag name after the `semantic-release` command successful execution
* The `semantic-release` config (i.e. `release.config.js` file) has been simplified:
  * Getting rid of the `releaseRules` property in order to follow standards (i.e. bumping version only for `fix`, `feat` and `BREAKING CHANGE` types)
  * Documenting where Conve

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,9 +12,9 @@ jobs:
     timeout-minutes: 300
 
     permissions:
-      contents: write # To be able to publish a GitHub release
-      issues: write # To be able to comment on released issues
-      pull-requests: write # To be able to comment on released pull requests
+      contents: write # Required to publish a GitHub release
+      issues: write # Required to comment on released issues
+      pull-requests: write # Required to comment on released pull requests
 
     outputs:
       release-tag: ${{ steps.release.outputs.tag }}
@@ -74,18 +74,20 @@ jobs:
         id: release
         env:
           GITHUB_TOKEN: ${{ github.token }}
+          # Hacky way of retrieving the released version tag name through a temporary file
           TMP_TAG_VERSION_NAME_FILE: ${{ runner.temp }}/tag_version_name
         working-directory: .github/
         run: |
-          npx --no-install semantic-release --ci
+          npx --no-install semantic-release
           echo "tag=$(cat "${TMP_TAG_VERSION_NAME_FILE}")" >> "${GITHUB_OUTPUT}"
 
-      - name: Create a PR for creating/updating the CHANGELOG file
+      - name: Create a PR for creating/updating the changelog file
         env:
           GITHUB_TOKEN: ${{ github.token }}
           CHANGELOG_BRANCH_NAME: changelog/${{ steps.release.outputs.tag }}
         run: |
           git switch --create "${CHANGELOG_BRANCH_NAME}"
+          git add "${CHANGELOG_FILE}"
           git commit --message='docs(changelog): release ${{ steps.release.outputs.tag }}' "${CHANGELOG_FILE}"
           git push --set-upstream origin "${CHANGELOG_BRANCH_NAME}"
 
@@ -102,8 +104,8 @@ jobs:
     needs: release-perform
 
     permissions:
-      contents: write
-      id-token: write
+      contents: write # Required to add assets in existing GitHub release
+      id-token: write # Required for signing through Sigstore
 
     env:
       TAG_NAME: ${{ needs.release-perform.outputs.release-tag }}
