--- a/.github/package.json
+++ b/.github/package.json
@@ -3,10 +3,9 @@
   "devDependencies": {
     "@commitlint/cli": "18.6.0",
     "@commitlint/config-conventional": "18.6.0",
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/exec": "6.0.3",
     "semantic-release": "23.0.2",
-    "semantic-release-github-pullrequest": "1.3.0"
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/exec": "6.0.3"
   },
   "engines": {
     "node": "^20.11.0"
