--- a/.github/workflows/openssf.yml
+++ b/.github/workflows/openssf.yml
@@ -17,10 +17,8 @@ jobs:
     timeout-minutes: 120
 
     permissions:
-      # Needed to upload the results to code-scanning dashboard.
-      security-events: write
-      # Needed to publish results and get a badge (see publish_results below).
-      id-token: write
+      security-events: write # Required to upload found security gaps
+      id-token: write # Required to publish results and get a badge
 
     steps:
       - name: Harden runner
