build(deps): bump bukkit-slf4j dependency to v2.0.0

--- a/src/spigot-plugin/pom.xml
+++ b/src/spigot-plugin/pom.xml
@@ -115,7 +115,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.Djaytan</groupId>
+            <groupId>com.djaytan.bukkit</groupId>
             <artifactId>bukkit-slf4j</artifactId>
         </dependency>
         <dependency>
