--- a/pom.xml
+++ b/pom.xml
@@ -203,9 +203,9 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>com.github.Djaytan</groupId>
+                <groupId>com.djaytan.bukkit</groupId>
                 <artifactId>bukkit-slf4j</artifactId>
-                <version>1.0.30</version>
+                <version>2.0.0</version>
             </dependency>
             <dependency>
                 <groupId>org.bstats</groupId>
