--- a/.github/workflows/openssf.yml
+++ b/.github/workflows/openssf.yml
@@ -31,7 +31,8 @@ jobs:
             api.github.com:443
             api.osv.dev:443
             www.bestpractices.dev:443
-            api.securityscorecards.dev:443
+            api.deps.dev:443
+            repo.maven.apache.org:443
             oss-fuzz-build-logs.storage.googleapis.com:443
             rekor.sigstore.dev:443
             fulcio.sigstore.dev:443
