--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,5 +59,6 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ github.token }}
+          MAVEN_ARGS: --batch-mode -Dstyle.color=always
         working-directory: .github/semantic-release/
         run: npx --no-install semantic-release
